# FaceBlur

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
demo/: streamlit_app.py  streamlit_video_app.py
face_blur/: __init__.py
face_blur/api/: app.py  errors.py  metrics.py  responses.py  routes.py  schemas.py
face_blur/core/: config.py  logging.py
face_blur/services/: blur_service.py  video_service.py
face_blur/stats/: __init__.py  store.py
face_blur/storage/: __init__.py  cleanup.py  filesystem.py
face_blur/workers/: __init__.py  broker.py  taskiq_app.py  tasks.py
frontend/: .env.example  package.json  pnpm-lock.yaml  streamlit_app.py  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: app-footer.tsx  app-header.tsx  results-card.tsx  selected-files-summary.tsx  status-indicator.tsx  theme-toggle.tsx  upload-card.tsx
frontend/src/components/ui/: carousel.tsx
frontend/src/data/: links.json
frontend/src/hooks/: useBlurWorkflow.ts  useHealth.ts  useQueue.ts  useStats.ts  useTheme.ts
frontend/src/lib/: api.ts
monitoring/: grafana-dashboard.json  prometheus.yml
tests/: conftest.py  test_api.py  test_blur_service.py  test_storage_cleanup.py
